# itesm-rpg

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  README.md
.cache/clangd/index/: cartesian2d.hh.61A9C3808692EA0D.idx  main.cc.1BEC0B2657652B52.idx
src/: cartesian2d.hh  main.cc  units.hh
src/rpg/entity/: entity.cc  entity.hh
src/rpg/item/: item.cc  item.hh
src/rpg/math/: cartesian2d.hh  shape2d.hh
